#compression test
#add_executable(block_test compression.cpp) 
add_executable(block_read_test  block_reading_tests.cpp)
add_executable(sort_test sorting_tests.cpp)
add_executable(stream_bench stream_test.cpp)
set_target_properties(block_read_test PROPERTIES COMPILE_FLAGS "-g")
#set_target_properties(sort_test PROPERTIES COMPILE_FLAGS "-Wall -Wextra -pedantic-errors -g -std=c++11")
set_target_properties(sort_test PROPERTIES COMPILE_FLAGS "-Wall -Wextra -pedantic-errors -g -std=c++11")
set_target_properties(stream_bench PROPERTIES COMPILE_FLAGS "-Wall -Wextra -pedantic-errors -g -std=c++11")
if ( ZLIB_FOUND )
    ## this is according to cmake third parties SE post
    include_directories( ${ZLIB_INCLUDE_DIRS})
    target_link_libraries(block_read_test ${ZLIB_LIBRARIES})
    target_link_libraries(sort_test ${ZLIB_LIBRARIES})
    target_link_libraries(stream_bench ${ZLIB_LIBRARIES})
endif()
#target_link_libraries(block_test ${Boost_LIBRARIES})
target_link_libraries(block_read_test ${Boost_LIBRARIES})
target_link_libraries(sort_test ${Boost_LIBRARIES})
target_link_libraries(stream_bench ${Boost_LIBRARIES})
#add_serial_test(block_test)
add_serial_test(block_read_test)
add_serial_test(sort_test)
add_serial_test(stream_bench)
