include_directories(${MPI_CXX_INCLUDE_PATH})
add_executable(arg_test test.cpp)
add_executable(statistic_test test_mpi.cpp ${PROJECT_SOURCE_DIR}/neuromapp/key-value/utils/statistic.cpp)
target_link_libraries(arg_test  ${Boost_LIBRARIES})
target_link_libraries(statistic_test  ${Boost_LIBRARIES} ${MPI_CXX_LIBRARIES})

if(SLURM_FOUND)
add_test(NAME arg_test COMMAND ${SLURM_SRUN_COMMAND} --time=00:00:10 argtest)
add_test(NAME statistic_test COMMAND ${SLURM_SRUN_COMMAND} --time=00:00:10 statistictest)
else()
add_test(arg arg_test)
add_test(statistic statistic_test)
endif()
